--- a/assets/main.css
+++ b/assets/main.css
@@ -7334,6 +7334,18 @@ body {
   font-size: 14px;
   background: #f0f2f4; }
 
+@media screen and (max-width: 768px) {
+  .article-body {
+    margin: 3rem !important; } }
+@media screen and (max-width: 1087px) {
+  #social {
+    background-color: inherit;
+    color: inherit; }
+
+  .navbar-menu {
+    min-width: 100%;
+    position: absolute;
+    margin-top: -1px; } }
 .navbar.is-white {
   background: #f0f2f4; }
 
@@ -7345,7 +7357,10 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 500px; }
+  height: 500px;
+  padding: 0 1.5rem 100px 3rem !important;
+  display: flex;
+  align-items: center; }
 
 .hero-body::before {
   content: "";
@@ -7360,7 +7375,7 @@ body {
 
 .articles {
   margin: 3rem 0;
-  margin-top: -200px; }
+  margin-top: -100px; }
 
 .articles .content p {
   line-height: 1.9; }
@@ -7382,8 +7397,7 @@ body {
 .media-content {
   margin-top: 3rem; }
 
-.article,
-.promo-block {
+.article:not(:first-child) {
   margin-top: 6rem; }
 
 div.column.is-8:first-child {
@@ -7435,3 +7449,14 @@ figure.image {
 
 .pagination-previous {
   margin-right: auto; }
+
+#to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99; }
+
+.pageloader .title {
+  white-space: normal;
+  text-align: center; }
